--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,16 @@ name: CI
 on:
   push:
     branches:
-      - pipeline*
+      - main
+  jobs:
+    update_dependencies:
+      steps:
+        - run: npm ci
 
 
 # Steps
 # 1. Make sure dependencies are installed
+
 #   - Optionally cache dependencies
 # 2. Test and lint the application
 #    - This can be run in parallel
