--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ jobs:
   update_dependencies:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+          uses: actions/checkout@v3
       - run: npm ci
 
 
