--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - run: npm ci
+      - run: npm run lint
+      - run: npm run test
+      - run: npm run build
+
 
 
 # Steps
