--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,11 @@ jobs:
       - run: npm run lint
       - run: npm run test
       - run: npm run build
+      - name: upload-artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: workshop-angular
+          path: /dist
 
 
 
