--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node-modules
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -45,7 +46,8 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node-modules
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -69,7 +71,8 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node-modules
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -93,7 +96,7 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node-modules
+          path: node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
