--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,12 +2,28 @@ name: CD
 
 on:
   workflow_run:
-    workflows: [CI]
+    workflows: [ CI ]
     types:
       - completed
 jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: download artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: ci.yml
+          workflow_conclusion: success
+      - name: deploy to GitHubPages
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: gh_pages
+          build_dir: .
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 # 1. Download artifact
 # 2. Deploy to github pages
 
