--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           workflow: ci.yml
           workflow_conclusion: success
+          name: dist
       - name: deploy to GitHubPages
         uses: crazy-max/ghaction-github-pages@v3
         with:
